Changelog
=========

2.0b2 - unreleased
------------------


2.0b1 - 2009-12-27
------------------

- Marked zope.component as a real dependency of this package.
  [hannosch]

2.0a2 - 2009-12-20
------------------

- Cleaned up some old charset related fallback code.
  [hannosch]

- Changed the development mode to be a non-persistent setting. By default it
  follows the Zope development mode (bin/instance fg vs. bin/instance console).
  The setting can be changed during process runtime.
  [hannosch]

2.0a1 - 2009-11-16
------------------

* Declare 'screen' to be the default for the media attribute instead of None.
  It is the most commonly used one in Plone's own themes.
  [hannosch]

* Fixed typo in update process of authenticated resources. Fixes #9599
  [naro]

* Fixed JS packer to be a little less greedy about protecting regular
  expressions. This fixes #8790.
  [dunlapm]

* Changed the order of CSS/JS rendering, CSS now renders first to allow the
  browser to get it as soon as possible, to avoid the "flash of unstyled
  content"
  [limi]

* Removed some whitespace in the rendering templates for JS, CSS and KSS to make 
  the source rendering more readable. These are very small and understandable
  templates, so we'd rather have some noise there than on the front end.
  [limi]

* Removed the `autogroupingmode` feature. In practice it turned out to work
  not so well and caused hard to debug problems.
  [hannosch]

* Automatically set the registries into development mode if Zope itself runs
  in development mode.
  [hannosch]

* Get the tests working again under Plone 5 and make sure we handle
  zope.app.publisher file resources correctly under repoze.zope2.
  [hannosch]

* Added missing InitializeClass call for BaseRegistryTool.
  [davisagli]

* Changed default values for resources to more sensible values.
  [hannosch]

* Restructured documentation files.
  [hannosch]

* Added `authenticated` as a new option to all resources. If a resource is