@@ -1,2 +1,2 @@
-from registries import IResourceRegistry, ICSSRegistry, IKSSRegistry, IJSRegistry
+from registries import IResourceRegistry, ICSSRegistry, IKSSRegistry, IJSRegistry, ICookedFile
 from viewletmanagers import IHtmlHeadScripts, IHtmlHeadStyles
